# agentic-content-analyzer

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.yaml.example  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PLAN_DIGEST_TO_PODCAST.md  PROJECT_PLAN.md  README.md  SECURITY.md  alembic.ini  docker-compose.langfuse.yml  docker-compose.openbao.yml  docker-compose.opik.yml  docker-compose.supabase.yml  docker-compose.yml  docker-entrypoint.sh  lint_with_sonar_rules.py  patch.diff  patch_audio.py  patch_content.py  patch_image.py  patch_theme.py  patch_voice.py  pnpm-workspace.yaml  pyproject.toml  railway.toml  rss_feeds.txt  rss_feeds.txt.example  skills-lock.json  test_imports.py  test_imports_top.py  test_output.txt  test_regex.py  test_regex2.py  test_sqlalchemy_escape.py  (+3 more)
.Jules/: palette.md
.beads/: .gitignore  config.yaml  issues.jsonl
.claude/: settings.json  settings.local.json
.claude/commands/: finalize-feature.md  start-feature.md
.claude/plans/: youtube-transcript-ingest.md
.claude/skills/: aca-deployment
.codex/: settings.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-railway-postgres.yml  ci.yml  deploy.yml  ios-build.yml  neon-pr.yml  security.yml  tauri-build.yml
.jules/: bolt.md  palette.md  sentinel.md
alembic/: env.py
alembic/versions/: 02cfa5c75b82_merge_heads.py  1455833d558b_add_huggingface_papers_source.py  16b8f13de9b6_add_content_hash_for_deduplication.py  1a4ad3270eb7_add_summary_model_used_index.py  1fdacd9de420_add_version_and_description_to_prompt_.py  203a8919b20b_reset_failed_content_from_anthropic_.py  22d53edb2933_add_perplexity_content_source.py  2969e6a07e38_add_relevant_links_to_newsletter_.py  2a0ca52d63c3_add_scholar_source_and_metadata_gin.py  33072a43b224_add_sharing_fields_to_content_summary_.py  3697508e93f1_add_prompt_overrides_table.py  41d180035213_add_markdown_content_and_theme_tags_.py  4d78f715c284_add_documents_table.py  58aa2c7e188c_add_summary_created_at_index.py  59fbc6999804_add_theme_analysis_table.py  5a65cf4fe7b6_add_content_id_to_newsletter_summaries.py  6b7c8d9e0f1a_refactor_pgqueuer_reliability.py  718414e9009f_merge_main_and_pgqueuer_reliability_.py  7238482da990_move_youtube_metadata_from_links_json_.py  76ed931b3444_add_digest_review_fields.py  7852b615ddcc_add_chat_tables.py  85939732a918_merge_multiple_heads.py  8753a5a83a94_drop_newsletter_table_and_fk.py  8f6faaa1bce9_merge_substack_enum_and_summary_index_.py  95c3f972ad83_initial_schema.py  a1b2c3d4e5f6_add_agent_tables.py  a1b2c3d4e5f6_add_arxiv_source_type_and_jsonb.py  a1b2c3d4e5f6_add_notification_tables.py  a1b2c3d4e5f6_add_perplexity_content_source.py  a1b2c3d4e5f6_add_podcast_tables.py  a1b2c3d4e5f6_add_scholar_source_and_metadata_gin.py  a1b2c3d4e5f6_add_xsearch_content_source.py  a1b2c3d4e5f7_add_embedding_metadata_columns.py  a1b2c3d4e5f8_add_podcast_tables.py  a23a53ea737b_merge_heads.py  a2b3c4d5e6f7_add_substack_content_source.py  a8b9c0d1e2f3_add_images_table.py  a950af83f96a_add_hierarchical_digest_support.py  add_blog_content_source.py  b017a1a2b3c4_bolt_performance_chat_indexes.py  (+44 more)
bookmarklet/: bookmarklet.js
docker/init/: 01-create-test-db.sh
docs/: ACA-AGENTS.md  ARCHITECTURE.md  CASE_STUDIES.md  CONTENT_CAPTURE.md  CONTENT_GUIDELINES.md  DESKTOP_DEPLOYMENT.md  DEVELOPMENT.md  GOTCHAS.md  LLM_KNOWLEDGE_BASE.md  MARKDOWN_PIPELINE_DESIGN.md  MOBILE_CAPTURE.md  MOBILE_DEPLOYMENT.md  MODEL_CONFIGURATION.md  OPENBAO.md  PG_CRON_SETUP.md  PRIVACY_POLICY.md  PROFILES.md  README.md  REVIEW_SYSTEM.md  SEARCH.md  SECURITY_REVIEW_PUBLIC_READINESS.md  SETUP.md  SYNC_DOWN.md  TESTING.md  USER_GUIDE.md  UX_DESIGN.md
docs/bug-scrub/: agent-fix-prompts.json  bug-scrub-report.md  fix-scrub-report.md
docs/merge-logs/: 2026-04-02.md  2026-04-03.md  2026-04-04.md  2026-04-11.md  2026-04-20.md
docs/plans/: 2025-01-08-revision-chat-panel.md  2025-01-09-chat-context-and-persistence.md  2026-01-09-docling-document-parsing.md  README.md  WEB_UI_SPEC.md
docs/security-review/: aggregate.json  gate.json  security-review-report.json  security-review-report.md
extension/: README.md  manifest.json  options.html  options.js  popup.html  popup.js
openspec/: AGENTS.md  project.md  task-graph.jsonl
opik/: nginx.conf.template  otel-collector-config.yaml
profiles/: base.yaml  ci-neon.yaml  local-falkordb.yaml  local-langfuse.yaml  local-openbao.yaml  local-opik.yaml  local-supabase.yaml  local.yaml  railway-falkordb.yaml  railway-neon-staging.yaml  railway-neon.yaml  railway.yaml  staging.yaml  supabase-cloud.yaml  test.yaml
railway/postgres/: Dockerfile  (+5 more)
scripts/: analyze_themes.py  bao_seed_newsletter.py  bootstrap-cloud.sh  check-profile-secrets.sh  check_alembic_heads.py  extract_entities.py  generate_daily_digest.py  generate_podcast.py  generate_weekly_digest.py  ingest_gmail.py  ingest_rss.py  ingest_substack.py  performance_test.py  query_knowledge_graph.py  railway-env-sync.sh  railway_env_sync.py  review_digest.py  run_pipeline.py  send_test_trace.py  setup_gmail.py  setup_test_db.py  summarize_newsletters.py  validate_docling.py  verify_setup.py
settings/: approval.yaml  evaluation.yaml  filtering.yaml  models.yaml  notifications.yaml  pricing.yaml  prompts.yaml  schedule.yaml  voice.yaml
shortcuts/: README.md
sources.d/: _defaults.yaml  arxiv.yaml.example  blogs.yaml  gmail.yaml  huggingface_papers.yaml  obsidian-ingest.yaml.example  podcasts.yaml  readwise.yaml  rss.yaml  scholar.yaml  substack.yaml  websearch.yaml  youtube.yaml  youtube_playlist.yaml  youtube_rss.yaml
src/: config.py  mcp_server.py  worker.py
supabase/: kong.yml
tests/: __init__.py  conftest.py  test_prompt_service.py
web/: .env.example  capacitor.config.ts  eslint.config.js  index.html  package.json  playwright.config.ts  railway.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: README  icon.icns
web/src-tauri/src/: lib.rs  main.rs  shortcuts.rs  tray.rs
(+2107 files in other folders)
