[project]
name = "agentic-newsletter-aggregator"
version = "0.1.0"
description = "AI-powered newsletter aggregation and summarization system"
authors = [
    {name = "Jan Kneumann"}
]
requires-python = ">=3.11"
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",

    # Task Queue
    "celery>=5.3.0",
    "redis>=5.0.0",

    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Newsletter Ingestion
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.116.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",

    # Agent Frameworks
    "anthropic>=0.40.0",  # Claude SDK
    "openai>=1.51.0",     # OpenAI SDK
    "tavily-python>=0.3.0", # Tavily Web Search

    # HTTP/Requests
    "httpx>=0.26.0",
    "requests>=2.31.0",

    # Email Delivery
    "sendgrid>=6.11.0",

    # Neo4j for Graphiti
    "neo4j>=5.16.0",

    # Utilities
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "pyyaml>=6.0.0",
    "tiktoken>=0.5.0",  # Token counting for context window management

    # Document Parsing
    "markitdown>=0.1.0",  # Microsoft's document to markdown converter
    "docling>=2.60.0",  # IBM's advanced document parser with table extraction

    # HTML to Markdown Conversion
    "trafilatura>=2.0.0",  # Academic-quality web content extraction
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
]
ocr = [
    "docling[ocr]>=2.60.0",  # OCR support for scanned documents
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions",
    "node_modules",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade - use modern Python syntax
    "B",      # flake8-bugbear - common bugs
    "C4",     # flake8-comprehensions - list/dict comprehensions
    "SIM",    # flake8-simplify - simplify code
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit - security
    "ASYNC",  # flake8-async - async best practices
    "DTZ",    # flake8-datetimez - timezone-aware datetime
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert in tests is fine
    "S105",   # hardcoded passwords (often false positives in tests)
    "S106",   # hardcoded passwords
    "S107",   # hardcoded default passwords (acceptable for local dev defaults)
    "S110",   # try-except-pass (sometimes intentional for optional operations)
    "S603",   # subprocess call (we control the inputs)
    "B008",   # function call in default argument (Depends() in FastAPI)
    "B904",   # raise from err (not critical for HTTPException)
    "DTZ001", # datetime.utcnow() - will address separately
    "DTZ003", # datetime.utcnow() - same as above
    "DTZ005", # datetime.now() without tz - will address separately
    "SIM102", # nested if statements (sometimes more readable)
    "SIM105", # contextlib.suppress (try-except-pass is clear enough)
    "SIM108", # ternary operator (if-else is sometimes clearer)
    "SIM115", # context manager for files (sometimes not needed)
    "SIM116", # dictionary vs if statements (readability preference)
    "SIM118", # key in dict vs dict.keys() (minor)
    "C401",   # unnecessary generator (minor)
    "C416",   # unnecessary comprehension (minor)
    "N806",   # variable naming in function (CONSTANTS are fine)
    "RUF022", # __all__ sorting (not critical)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Allow asserts
    "S105",   # Allow test credentials
    "S106",   # Allow test credentials
    "SIM103", # Return condition directly (if-else is clearer in tests)
    "SIM117", # Nested with statements (more readable in tests)
    "F841",   # Unused variables (sometimes needed for setup)
    "RUF005", # List concatenation (simpler to read)
    "RUF015", # iter() over slice (minor)
    "RUF043", # Regex pattern without raw string (acceptable in tests)
    "B007",   # Loop variable not used (sometimes intentional)
]
"alembic/*" = ["E402"]  # Imports not at top of file

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

# SQLAlchemy ORM models have dynamic attributes that mypy struggles with
[[tool.mypy.overrides]]
module = [
    "src.models.*",
    "src.services.*",
    "src.processors.*",
    "src.api.*",
    "src.ingestion.*",
    "src.utils.*",
]
# Allow assignments to Column types (SQLAlchemy pattern) and optional access
disable_error_code = ["assignment", "arg-type", "misc", "attr-defined", "union-attr", "index", "operator", "no-any-return", "no-untyped-def"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing -m 'not integration'"
markers = [
    "integration: marks tests as integration tests (require API credentials and network)",
    "live_api: marks tests that call real external APIs (OpenAI, ElevenLabs) - costs money",
]
